bk_ida/gccida/c3/get_exception_pointer
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_exception_pointer/src/except.c:1510:25: error: use of undeclared identifier 'machine_mode'
result = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_exception_pointer/src/obj/except.o] Error 1
